# space-it

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  cpp.hint  vcpkg.json
raw_assets/: rene.json
scripts/: generate_assets.bat  generate_assets.sh
sid_lib/: CMakeLists.txt  sid_lib.rc.in
sid_lib/include/: sid_precompile.h
sid_lib/include/sid/: allocator.h  animation.h  compilers.h  date.h  debug.h  define.h  event.h  file_system.h  graphics.h  hash.h  hashmap.h  input.h  log.h  math.h  memory.h  os.h  resource.h  ring_queue.h  sid_lib.h  string.h  string_id.h  type.h
sid_lib/src/: allocator.c  animation.c  date.c  debug.c  file_system.c  graphics.c  hash.c  hashmap.c  log.c  math.c  memory.c  resource.c  ring_queue.c  string.c  string_id.c
src/: CMakeLists.txt  config.c  config.h  game.c  game.h  main.c
src/system/: animation_system.c  animation_system.h  event_system.c  event_system.h  input_system.c  input_system.h  memory_system.c  memory_system.h  physics_system.c  physics_system.h  rendering_system.c  rendering_system.h  resource_system.c  resource_system.h  scene_system.c  scene_system.h  time_system.c  time_system.h
